# scooty-doo-backend

./: .coveragerc  .env.example  .gitignore  .pylintrc  Dockerfile  README.md  checks.bash  config.py  docker-compose.yaml  pyproject.toml  requirements.txt  reset_db.sh  start.sh
.github/workflows/: python-app.yml
alembic/: env.py
alembic/backup/: test.py
api/: Dockerfile  README.md  config.py  dependencies.py  exceptions.py  main.py  requirements.txt
api/db/: database.py  db.py  repository.py  repository_admin.py  repository_base.py  repository_bike.py  repository_city.py  repository_transaction.py  repository_trip.py  repository_user.py  repository_zone.py  table_creation.py
api/dependencies/: dependencies.py  repository_factory.py
api/models/: admin_models.py  bike_models.py  bike_test.py  city_models.py  db_models.py  models.py  oauth_models.py  output_models.py  stripe_models.py  transaction_models.py  trip_models.py  user_models.py  wkt_models.py  zone_models.py
api/oauth/: oauth.py
api/routes/: admin.py  bike_report.py  bikes.py  cities.py  client.py  me.py  oauth.py  stripe.py  transactions.py  trips.py  users.py  zones.py
api/services/: bike_caller.py  oauth.py  socket.py
api/socket/: socket.py
database/: database.py  docker-compose.yml  load_mock_data.py  models.py  repository.py  requirements.txt  test_creation.py
database/psycopg/: insert_mock_data.py  schema.py
database/schema/: schema.sql
models/: models.py
tests/: test_bikes.py  test_github_oauth.py  test_models.py  test_socket.py  utils.py
tests/mock_files/: bike.json  (+14 more)
(+55 files in other folders)
